# Django_Blogging_Platform

./: .gitignore  README.md  requirements.txt
blog/: models.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_author.py
blog/templates/blog/: base.html  create.html  detail.html  home.html  post_confirm_delete.html  user.html
django_website/: settings.py  urls.py
my_packages/: pyproject.toml
users/: forms.py  models.py  signals.py  views.py
users/migrations/: 0001_initial.py  0002_remove_profile_img_profile_image.py
users/templates/users/: login.html  logout.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
