[tool.poetry]
name = "my-packages"
version = "0.1.0"
description = ""
authors = ["Paramveer <paramveermarwahafc@gmail.com>"]
readme = "README.md"
packages = [{include = "my_packages"}]

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "3.5.2"
black = "22.6.0"
click = "8.1.3"
Django = "4.1"
django-crispy-forms = "1.14.0"
mypy-extensions = "0.4.3"
pathspec = "0.10.0"
platformdirs = "2.5.2"
psycopg2 = "2.9.3"
sqlparse = "0.4.2"
tomli = "2.0.1"
pillow = "9.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
